--- a/style.css
+++ b/style.css
@@ -38,13 +38,16 @@ body{
 	margin: 0 20px;
 	padding-top: 20px;
 	font-size: 15px;
-	color: #919191;
+	color: #ededed;
 }
 #output{
 	text-align: right;
 	height: 60px;
 	margin: 10px 20px;
 	font-size: 30px;
+    background-color: aliceblue;
+    border-radius: 7px;
+    padding: 2px;
 }
 #keyboard{
 	height: 400px;
@@ -57,10 +60,16 @@ body{
 	border-radius: 50%;
 	border-width: 0;
 	font-weight: bold;
-	font-size: 15px;
+	font-size: 20px;
 }
-.number, .empty{
-	background-color: #eaedef;
+
+.empty{
+    background-color: #344;
+}
+
+.number{
+	background-color: #405d5d;
+    color: aliceblue;
 }
 .number, .operator{
 	cursor: pointer;
